--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -6,9 +6,10 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_margin="0dp"
         android:contentDescription="Splashscreen"
-        android:scaleType="centerCrop"
+        android:scaleType="fitCenter"
         android:background="@color/splashprimary"
         android:src="@drawable/splashscreen"/>
 </RelativeLayout>
